--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-custom-dropdown": "^1.0.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-modal-dropdown": "^1.0.1",
     "react-native-web": "~0.13.12",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-time-picker": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
