--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native-stack": "^6.0.4",
     "@react-navigation/stack": "^6.0.7",
@@ -18,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-custom-dropdown": "^1.0.1",
+    "react-native-date-picker": "^4.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-modal-dropdown": "^1.0.1",
     "react-native-web": "~0.13.12",
