--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native-stack": "^6.0.4",
+    "@react-navigation/drawer": "^6.1.6",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
@@ -21,7 +23,9 @@
     "react-native-custom-dropdown": "^1.0.1",
     "react-native-date-picker": "^4.0.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-modal-dropdown": "^1.0.1",
+    "react-native-reanimated": "^2.2.2",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-time-picker": "^4.4.1",
