--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "react-native-date-picker": "^4.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-global-props": "^1.1.5",
     "react-native-modal-dropdown": "^1.0.1",
     "react-native-reanimated": "^2.2.2",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-side-menu-updated": "^1.3.2",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-time-picker": "^4.4.1",
