--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-side-menu-updated": "^1.3.2",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-time-picker": "^4.4.1",
