--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "adv103",
-    "slug": "adv103",
+    "name": "BreadCRUD",
+    "slug": "BreadCRUD",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
